// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LastNameField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="last_name"
      >
        Nazwisko
      </label>
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <input
          class="sc-fodVxV gZGAuo"
          id="testId"
          label="Nazwisko"
          name="last_name"
          placeholder="Nazwisko"
          value="3232"
        />
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`<LastNameField /> matches snapshot 1`] = `
<input
  class="sc-fodVxV kubVCF"
  id="testId"
  label="Nazwisko"
  name="last_name"
  placeholder="Nazwisko"
  value=""
/>
`;

exports[`<LastNameField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="last_name"
      >
        LastName*
      </label>
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <input
          class="sc-fodVxV gZGAuo"
          id="testId"
          label="LastName"
          name="last_name"
          placeholder="Nazwisko*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        To pole jest wymagane
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`<LastNameField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="last_name"
      >
        LastName
      </label>
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <input
          class="sc-fodVxV kubVCF"
          id="testId"
          label="LastName"
          name="last_name"
          placeholder="Nazwisko"
          value=""
        />
      </div>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;
